# infopanel

./: .gitignore  README.md  emulator_config.json  justfile  pyproject.toml
infopanel/: __init__.py  __main__.py  config.py  ledpanel.py  scheduler.py
infopanel/fonts/: tb-8-bold.bdf  tb-8-bold.kbitx  tb-8.bdf  tb-8.kbitx
infopanel/widgets/: __init__.py  base.py  hafas.py  hafas_timetable.py  text.py
